# md-api

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  makefile  ocr.py  pyproject.toml  requirements.txt  server.py  test.sh
.github/workflows/: docker.yml
