[project]
name = "doc-api"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litserve>=0.2.5",
    "markitdown>=0.0.1a3",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
ocr = [
    "easyocr>=1.7.2",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipython>=8.31.0",
    "isort>=5.13.2",
]
